updated logo in all html and css files

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,11 @@
     <header>
       <div class="container">
         <div class="header-content">
-          <a href="index.html"
-            ><div class="logo">
-              <i class="fas fa-leaf"></i>
-              <span>DXN</span>
-            </div></a
-          >
+          <div class="logo">
+            <a href="index.html"
+              ><i class="fas fa-leaf"></i> <span>DXN</span></a
+            >
+          </div>
           <nav>
             <ul>
               <li><a href="index.html">হোম</a></li>
