--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <i class="fas fa-leaf"></i>
-            <span>DXN</span>
+            <a href=""><i class="fas fa-leaf"></i> <span>DXN</span></a>
           </div>
           <nav>
             <ul>
