--- a/products.html
+++ b/products.html
@@ -25,8 +25,9 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <i class="fas fa-leaf"></i>
-            <span>DXN</span>
+            <a href="index.html"
+              ><i class="fas fa-leaf"></i> <span>DXN</span></a
+            >
           </div>
           <nav>
             <ul>
