--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <a href=""><i class="fas fa-leaf"></i> <span>DXN</span></a>
+            <a href="index.html"
+              ><i class="fas fa-leaf"></i> <span>DXN</span></a
+            >
           </div>
           <nav>
             <ul>
@@ -44,19 +46,65 @@
     <section class="hero" id="home">
       <div class="container">
         <div class="hero-content">
-          <h1>প্রাকৃতিক স্বাস্থ্য এবং আর্থিক স্বাধীনতা একসাথে</h1>
+          <h1>প্রাকৃতিক স্বাস্থ্য এবং আর্থিক স্বাধীনতা – একসাথে</h1>
           <p>
-            DXN-এর গ্যানোডার্মা ভিত্তিক প্রোডাক্টস ব্যবহার করে সুস্থ থাকুন এবং
-            ঝুঁকিমুক্ত MLM ব্যবসার মাধ্যমে আয় করুন। কোনো প্রোডাক্ট ক্রয় ছাড়াই
-            শুরু করুন!
+            DXN-এর পণ্য এবং ব্যবসার সুযোগ আপনার সুস্থ জীবন ও আয়ের পথ তৈরি করবে।
+            এখনই শুরু করুন আপনার সাফল্যের যাত্রা।
           </p>
           <a
             href="https://wa.me/8801707042018?text=আমি%20DXN%20এ%20রেজিস্ট্রেশন%20করতে%20চাই"
             class="btn btn-whatsapp"
             target="_blank"
           >
-            <i class="fab fa-whatsapp"></i> WhatsApp-এ যোগাযোগ করুন
+            <i class="fab fa-whatsapp"></i> যোগাযোগ করুন
           </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- DXN পরিচয় সেকশন -->
+    <section class="about-dxn">
+      <div class="container">
+        <div class="about-content">
+          <div class="about-image">
+            <img
+              src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+              alt="DXN প্রোডাক্টস"
+            />
+          </div>
+          <div class="about-text">
+            <h2>DXN সম্পর্কে</h2>
+            <p>
+              DXN হল একটি আন্তর্জাতিক কোম্পানি, যা মূলত গ্যানোডার্মা (লাল রেইশি
+              মাশরুম) ভিত্তিক হেলথ প্রোডাক্টS তৈরি করে। 1993 সালে মালয়েশিয়ায়
+              প্রতিষ্ঠিত, DXN এখন বিশ্বের 180টিরও বেশি দেশে তার ব্যবসা পরিচালনা
+              করছে।
+            </p>
+            <p>
+              DXN-এর মিশন হল উচ্চমানের, প্রাকৃতিক স্বাস্থ্য পণ্য সরবরাহের
+              মাধ্যমে মানুষের জীবনযাত্রার মান উন্নত করা এবং সদস্যদের জন্য আর্থিক
+              সুযোগ সৃষ্টি করা।
+            </p>
+
+            <div class="about-features">
+              <div class="feature-item">
+                <i class="fas fa-check-circle"></i>
+                <span>180+ দেশে কার্যক্রম</span>
+              </div>
+              <div class="feature-item">
+                <i class="fas fa-check-circle"></i>
+                <span>গ্যানোডার্মা ভিত্তিক প্রোডাক্ট</span>
+              </div>
+              <div class="feature-item">
+                <i class="fas fa-check-circle"></i>
+                <span>বিনা পুঁজির ব্যবসার সুযোগ</span>
+              </div>
+              <div class="feature-item">
+                <i class="fas fa-check-circle"></i>
+                <span>প্রাকৃতিক ও জৈব পণ্য</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -91,13 +139,20 @@
             </p>
           </div>
         </div>
+
+        <div class="solution-note">
+          <p>
+            তাহলে আপনি অবশ্যই বিনা পুঁজির, ঝুঁকি মুক্ত এই ব্যবসাটিতে একবার
+            চেষ্টা করতে পারেন আপনার বর্তমান কাজের পাশাপাশি।
+          </p>
+        </div>
       </div>
     </section>
 
     <!-- প্রোডাক্টস সেকশন -->
     <section class="products" id="products">
       <div class="container">
-        <h2 class="section-title">DXN-এর জনপ্রিয় প্রোডাক্টস</h2>
+        <h2 class="section-title">DXN-এর জনপ্রিয় প্রোডাক্টS</h2>
         <div class="product-grid">
           <div class="product-card">
             <div
@@ -125,7 +180,7 @@
               <h3>গ্যানোডার্মা চা</h3>
               <p>
                 সুগন্ধী ভেষজ চা যা স্ট্রেস কমায়, হজমশক্তি বাড়ায় এবং শরীর থেকে
-                টক্সিন দূর করে।
+                টক্সিন দূর করে。
               </p>
             </div>
           </div>
@@ -137,13 +192,17 @@
               "
             ></div>
             <div class="product-info">
-              <h3>হেলথ সাপ্লিমেন্টস</h3>
+              <h3>হেলথ সাপ্লিমেন্টS</h3>
               <p>
                 বিভিন্ন ভিটামিন, মিনারেল এবং অ্যান্টিঅক্সিডেন্ট সমৃদ্ধ
-                সাপ্লিমেন্টস যা শরীরের পুষ্টির চাহিদা পূরণ করে।
+                সাপ্লিমেন্টS যা শরীরের পুষ্টির চাহিদা পূরণ করে।
               </p>
             </div>
           </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 40px">
+          <a href="products.html" class="btn">সমস্ত প্রোডাক্টS দেখুন</a>
         </div>
       </div>
     </section>
@@ -255,6 +314,10 @@
             </div>
           </div>
         </div>
+
+        <div style="text-align: center; margin-top: 40px">
+          <a href="success-stories.html" class="btn">আরও সাফল্যের গল্প দেখুন</a>
+        </div>
       </div>
     </section>
 
@@ -292,7 +355,7 @@
             <p>
               নিচের বাটনে ক্লিক করে আমাদের WhatsApp-এ মেসেজ করুন এবং বিনামূল্যে
               রেজিস্ট্রেশন সম্পন্ন করুন। আমাদের টিম আপনাকে সম্পূর্ণ প্রক্রিয়াটি
-              বুঝিয়ে দেবে।
+              বুঝিয়ে দেবে。
             </p>
           </div>
           <a
@@ -314,14 +377,14 @@
             <h3>DXN সম্পর্কে</h3>
             <p>
               DXN হল একটি আন্তর্জাতিক কোম্পানি, যা মূলত গ্যানোডার্মা ভিত্তিক
-              হেলথ প্রোডাক্টস তৈরি করে। বিশ্বব্যাপী আমাদের কার্যক্রম রয়েছে।
+              হেলথ প্রোডাক্টS তৈরি করে। বিশ্বব্যাপী আমাদের কার্যক্রম রয়েছে।
             </p>
           </div>
           <div class="footer-section">
             <h3>দ্রুত লিংক</h3>
             <ul>
               <li><a href="index.html">হোম</a></li>
-              <li><a href="products.html">প্রোডাক্টস</a></li>
+              <li><a href="products.html">প্রোডাক্টS</a></li>
               <li><a href="business.html">ব্যবসার সুযোগ</a></li>
               <li><a href="success-stories.html">সাফল্যের গল্প</a></li>
               <li><a href="contact.html">যোগাযোগ</a></li>
