--- a/business.html
+++ b/business.html
@@ -53,47 +53,52 @@
     </section>
 
     <!-- ব্যবসার সুযোগ সেকশন -->
-    <section class="business-opportunity">
-      <div class="container">
-        <h2 class="section-title">কেন DXN এ যোগ দেবেন?</h2>
+<section class="business-opportunity">
+  <div class="container">
+    <h2 class="section-title">কেন DXN এ যোগ দেবেন?</h2>
 
-        <div class="benefits">
-          <div class="benefit-card">
-            <div class="benefit-icon">
-              <i class="fas fa-wallet"></i>
-            </div>
-            <h3>বিনিয়োগ的不需要</h3>
-            <p>
-              কোনো প্রোডাক্ট কিনতে হবে না, শুধু রেজিস্ট্রেশন করুন এবং শুরু করুন
-            </p>
-          </div>
-
-          <div class="benefit-card">
-            <div class="benefit-icon">
-              <i class="fas fa-clock"></i>
-            </div>
-            <h3>নমনীয় সময়</h3>
-            <p>আপনার সুবিধামতো সময়ে কাজ করুন, পার্টটাইম বা ফুলটাইম</p>
-          </div>
-
-          <div class="benefit-card">
-            <div class="benefit-icon">
-              <i class="fas fa-globe"></i>
-            </div>
-            <h3>বিশ্বব্যাপী সুযোগ</h3>
-            <p>বিশ্বের যেকোনো প্রান্ত থেকে কাজ করুন এবং আয় করুন</p>
-          </div>
-
-          <div class="benefit-card">
-            <div class="benefit-icon">
-              <i class="fas fa-chart-line"></i>
-            </div>
-            <h3>অসীম আয়ের সম্ভাবনা</h3>
-            <p>কমিশন, বোনাস এবং incentives এর মাধ্যমে অসীম আয়ের সুযোগ</p>
-          </div>
+    <div class="benefits">
+      <div class="benefit-card">
+        <div class="benefit-icon">
+          <i class="fas fa-wallet"></i>
         </div>
+        <h3>কম বিনিয়োগে শুরু</h3>
+        <p>
+          রেজিস্ট্রেশন ফি খুবই কম এবং কোনো বাধ্যতামূলক প্রোডাক্ট কিনতে হয় না।
+        </p>
       </div>
-    </section>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">
+          <i class="fas fa-clock"></i>
+        </div>
+        <h3>নমনীয় সময়</h3>
+        <p>নিজের সুবিধামতো সময়ে কাজ করুন — পার্টটাইম বা ফুলটাইম।</p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">
+          <i class="fas fa-globe"></i>
+        </div>
+        <h3>বিশ্বব্যাপী সুযোগ</h3>
+        <p>
+          DXN এর ব্যবসা ১৮০+ দেশে চালু, তাই যেকোনো স্থান থেকে আয় করার সুযোগ।
+        </p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <h3>অসীম আয়ের সম্ভাবনা</h3>
+        <p>
+          সরাসরি বিক্রয়, টিম বোনাস, লিডারশিপ ও গ্লোবাল ইনসেনটিভস সহ একাধিক আয়ের উৎস।
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- কিভাবে শুরু করবেন সেকশন -->
     <section class="how-to-start">
@@ -151,32 +156,112 @@
       </div>
     </section>
 
-    <!-- আয়ের পরিকল্পনা সেকশন -->
-    <section class="income-plan">
+       <!-- আয়ের পরিকল্পনা সেকশন -->
+<section class="income-plan">
+  <div class="container">
+    <h2 class="section-title">আয়ের পরিকল্পনা</h2>
+
+    <div class="plan-cards">
+      <div class="plan-card">
+        <h3>সরাসরি বিক্রয় লাভ</h3>
+        <div class="plan-percentage">20% – 25%</div>
+        <p>পণ্য কম দামে কিনে বেশি দামে বিক্রি করে তাৎক্ষণিক লাভ।</p>
+      </div>
+
+      <div class="plan-card">
+        <h3>গ্রুপ বোনাস</h3>
+        <div class="plan-percentage">6% – 21%</div>
+        <p>আপনার টিমের মোট PV এর উপর ভিত্তি করে মাসিক বোনাস।</p>
+      </div>
+
+      <div class="plan-card">
+        <h3>স্টার ও ডেভেলপমেন্ট বোনাস</h3>
+        <div class="plan-percentage">বিশেষ</div>
+        <p>নতুন স্টার এজেন্ট ও লিডার তৈরি করলে অতিরিক্ত আয়।</p>
+      </div>
+
+      <div class="plan-card">
+        <h3>লিডারশিপ বোনাস</h3>
+        <div class="plan-percentage">ডায়মন্ড থেকে</div>
+        <p>ডায়মন্ড লেভেল অর্জনের পর আসল বড় ইনকামের উৎস।</p>
+      </div>
+
+      <div class="plan-card">
+        <h3>ইন্টারন্যাশনাল প্রফিট শেয়ারিং</h3>
+        <div class="plan-percentage">গ্লোবাল</div>
+        <p>সারা বিশ্বের DXN বিক্রয় থেকে নির্দিষ্ট শেয়ার।</p>
+      </div>
+
+      <div class="plan-card">
+        <h3>ট্রাভেল সেমিনার ইনসেনটিভ</h3>
+        <div class="plan-percentage">ভ্রমণ</div>
+        <p>যোগ্য ডিস্ট্রিবিউটরদের জন্য ফ্রি বিদেশ ভ্রমণ ও সেমিনার।</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+    <!-- DXN আয়ের টেবিল -->
+    <section class="income-table">
       <div class="container">
-        <h2 class="section-title">আয়ের পরিকল্পনা</h2>
-
-        <div class="plan-cards">
-          <div class="plan-card">
-            <h3>সরাসরি বিক্রয় কমিশন</h3>
-            <div class="plan-percentage">20% - 30%</div>
-            <p>আপনার সরাসরি বিক্রয় থেকে প্রতি মাসে高达 30% কমিশন পান</p>
-          </div>
-
-          <div class="plan-card">
-            <h3>টিম বোনাস</h3>
-            <div class="plan-percentage">10% - 15%</div>
-            <p>আপনার টিমের বিক্রয় থেকে অতিরিক্ত বোনাস উপার্জন করুন</p>
-          </div>
-
-          <div class="plan-card">
-            <h3>পদোন্নতি Incentives</h3>
-            <div class="plan-percentage">বিশেষ</div>
-            <p>বিভিন্ন স্তরে পদোন্নতির জন্য বিশেষ incentives এবং rewards</p>
-          </div>
+        <h2 class="section-title">DXN প্রোমোশন ও ইনকাম চার্ট</h2>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>লেভেল / র‍্যাঙ্ক</th>
+                <th>শর্ত (Requirement)</th>
+                <th>ইনকাম / বোনাস সুবিধা</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>ডিস্ট্রিবিউটর (D)</td>
+                <td>নতুন মেম্বার রেজিস্ট্রেশন</td>
+                <td>রিটেইল প্রফিট, ছোট % গ্রুপ বোনাস</td>
+              </tr>
+              <tr>
+                <td>QSA</td>
+                <td>নিজে মাসে 100 PV</td>
+                <td>গ্রুপ বোনাসে অংশগ্রহণ</td>
+              </tr>
+              <tr>
+                <td>স্টার এজেন্ট (SA)</td>
+                <td>মোট 1800 PV (নিজে/টিম)</td>
+                <td>গ্রুপ বোনাস (৬%–২১%), স্টার বোনাস শুরু</td>
+              </tr>
+              <tr>
+                <td>স্টার রুবি (SR)</td>
+                <td>আন্ডারে ৬ জন SA</td>
+                <td>স্টার বোনাস + ডেভেলপমেন্ট বোনাস</td>
+              </tr>
+              <tr>
+                <td>স্টার ডায়মন্ড (SD)</td>
+                <td>আন্ডারে ৬ জন SR</td>
+                <td>লিডারশিপ বোনাস (বড় ইনকাম এখান থেকে)</td>
+              </tr>
+              <tr>
+                <td>ডাবল ডায়মন্ড (DD)</td>
+                <td>আন্ডারে ২ জন SD</td>
+                <td>লিডারশিপ বোনাস (আরো গভীর লেভেল)</td>
+              </tr>
+              <tr>
+                <td>ক্রাউন ডায়মন্ড (CD)</td>
+                <td>আন্ডারে ২০+ ডায়মন্ড লাইন</td>
+                <td>গ্লোবাল রিকগনিশন, বড় বোনাস</td>
+              </tr>
+              <tr>
+                <td>ক্রাউন অ্যাম্বাসেডর (CA)</td>
+                <td>সর্বোচ্চ র‍্যাঙ্ক, বড় আন্তর্জাতিক নেটওয়ার্ক</td>
+                <td>ইন্টারন্যাশনাল প্রফিট শেয়ারিং, TSI, বিশেষ ইনসেনটিভ</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </section>
+
 
     <!-- FAQ সেকশন -->
     <section class="faq-section">
