updayed index.html & style.css

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="hero-content">
           <h1>প্রাকৃতিক স্বাস্থ্য এবং আর্থিক স্বাধীনতা – একসাথে</h1>
           <p>
-            DXN-এর পণ্য এবং ব্যবসার সুযোগ আপনার সুস্থ জীবন ও আয়ের পথ তৈরি করবে।
-            এখনই শুরু করুন আপনার সাফল্যের যাত্রা।
+            DXN-এর প্রোডাক্ট ও ব্যবসার সুযোগ আপনার সুস্থ জীবন ও আয়ের পথ তৈরি করবে।
+            আজই শুরু করুন আপনার সাফল্যের যাত্রা।
           </p>
           <a
             href="https://wa.me/8801707042018?text=আমি%20DXN%20এ%20রেজিস্ট্রেশন%20করতে%20চাই"
@@ -63,30 +63,27 @@
     <!-- সমস্যা ও সমাধান সেকশন -->
     <section class="problem-solution">
       <div class="container">
-        <h2 class="section-title">আপনি কি এই সমস্যাগুলোর মুখোমুখি?</h2>
+        <h2 class="section-title">আপনি কি এসব সমস্যায় ভুগছেন?</h2>
         <div class="ps-container">
           <div class="ps-item">
             <i class="fas fa-heartbeat"></i>
             <h3>স্বাস্থ্য সমস্যা</h3>
             <p>
-              কাজের চাপ, অনিয়মিত জীবনযাপন এবং অস্বাস্থ্যকর খাদ্যাভাসের কারণে
-              শারীরিক সমস্যা দেখা দিচ্ছে?
+              কাজের চাপ, অস্বাস্থ্যকর খাবার ও অনিয়মিত জীবনযাপনের কারণে কি আপনার শরীরে সমস্যা দেখা দিচ্ছে?
             </p>
           </div>
           <div class="ps-item">
             <i class="fas fa-money-bill-wave"></i>
             <h3>আর্থিক চাপ</h3>
             <p>
-              মাসের শেষে টাকা না থাকা, ঋণের বোঝা, বা পরিবারের চাহিদা পূরণ করতে
-              হিমশিম খাওয়া?
+              মাস শেষে টাকা শেষ হয়ে যাওয়া, ঋণের বোঝা কিংবা পরিবারের চাহিদা পূরণে অসুবিধায় আছেন?
             </p>
           </div>
           <div class="ps-item">
             <i class="fas fa-clock"></i>
-            <h3>সময়ের অভাব</h3>
+            <h3>সময়ের অভাব</h3>
             <p>
-              9-to-5 চাকরিতে আটকে থেকে নিজের জন্য সময় না পাওয়া এবং স্বপ্ন
-              পূরণের সুযোগ না থাকা?
+              চাকরির ব্যস্ততায় নিজের জন্য সময় পাচ্ছেন না, আর স্বপ্ন পূরণের সুযোগ হারাচ্ছেন?
             </p>
           </div>
         </div>
@@ -101,45 +98,36 @@
           <div class="product-card">
             <div
               class="product-img"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1544787219-7f47ccb76574?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
-              "
+              style="background-image: url('https://images.unsplash.com/photo-1544787219-7f47ccb76574?auto=format&fit=crop&w=500&q=80');"
             ></div>
             <div class="product-info">
               <h3>গ্যানোডার্মা কফি</h3>
               <p>
-                প্রাকৃতিক গ্যানোডার্মা এক্সট্র্যাক্ট সমৃদ্ধ সুস্বাদু কফি, যা
-                এনার্জি বাড়ায় এবং ইমিউনিটি সিস্টেম শক্তিশালী করে।
+                গ্যানোডার্মা সমৃদ্ধ কফি যা এনার্জি বাড়ায়, শরীরকে সতেজ রাখে এবং ইমিউন সিস্টেমকে শক্তিশালী করে।
               </p>
             </div>
           </div>
           <div class="product-card">
             <div
               class="product-img"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1556679343-c7306c1976bc?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
-              "
+              style="background-image: url('https://images.unsplash.com/photo-1556679343-c7306c1976bc?auto=format&fit=crop&w=500&q=80');"
             ></div>
             <div class="product-info">
               <h3>গ্যানোডার্মা চা</h3>
               <p>
-                সুগন্ধী ভেষজ চা যা স্ট্রেস কমায়, হজমশক্তি বাড়ায় এবং শরীর থেকে
-                টক্সিন দূর করে।
+                ভেষজ চা যা স্ট্রেস কমায়, হজমশক্তি উন্নত করে এবং শরীর থেকে টক্সিন বের করতে সাহায্য করে।
               </p>
             </div>
           </div>
           <div class="product-card">
             <div
               class="product-img"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
-              "
+              style="background-image: url('https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?auto=format&fit=crop&w=500&q=80');"
             ></div>
             <div class="product-info">
               <h3>হেলথ সাপ্লিমেন্টস</h3>
               <p>
-                বিভিন্ন ভিটামিন, মিনারেল এবং অ্যান্টিঅক্সিডেন্ট সমৃদ্ধ
-                সাপ্লিমেন্টস যা শরীরের পুষ্টির চাহিদা পূরণ করে।
+                ভিটামিন, মিনারেল এবং অ্যান্টিঅক্সিডেন্ট সমৃদ্ধ সাপ্লিমেন্ট যা শরীরের পুষ্টির ঘাটতি পূরণ করে।
               </p>
             </div>
           </div>
@@ -153,31 +141,29 @@
         <div class="bo-content">
           <h2>ঝুঁকিমুক্ত ব্যবসার সুযোগ</h2>
           <p>
-            DXN-এ আপনি নিজে কোনো প্রোডাক্ট কিনতে হবে না, তারপরও ব্যবসা শুরু করা
-            যাবে। শুধু ফ্রি রেজিস্ট্রেশন করুন এবং আপনার রেফারেল লিংক শেয়ার করে
-            আয় করা শুরু করুন।
+            DXN-এ ব্যবসা শুরু করতে আপনার কোনো পণ্য কিনতে হবে না। শুধু ফ্রি রেজিস্ট্রেশন করুন এবং আপনার রেফারেল লিংক শেয়ার করুন। তারপর থেকেই আয় শুরু হবে।
           </p>
 
           <div class="benefits">
             <div class="benefit">
               <i class="fas fa-wallet"></i>
-              <h3>বিনিয়োগ的不需要</h3>
-              <p>কোনো প্রোডাক্ট কিনতে হবে না</p>
+              <h3>কোনো বিনিয়োগ নেই</h3>
+              <p>শুধু ফ্রি রেজিস্ট্রেশন করলেই হবে</p>
             </div>
             <div class="benefit">
               <i class="fas fa-clock"></i>
               <h3>নমনীয় সময়</h3>
-              <p>আপনার সুবিধামতো সময়ে কাজ করুন</p>
+              <p>আপনার সুবিধামতো সময়ে কাজ করতে পারবেন</p>
             </div>
             <div class="benefit">
               <i class="fas fa-globe"></i>
-              <h3>বিশ্বব্যাপী সুযোগ</h3>
-              <p>বিশ্বের যেকোনো প্রান্ত থেকে কাজ করুন</p>
+              <h3>গ্লোবাল সুযোগ</h3>
+              <p>বিশ্বের যেকোনো জায়গা থেকে কাজ করতে পারবেন</p>
             </div>
           </div>
 
           <a
-            href="https://wa.me/8801707042018?text=আমি%20DXN%20ব্যবসা%20opportunity%20সম্পর্কে%20জানতে%20চাই"
+            href="https://wa.me/8801707042018?text=আমি%20DXN%20ব্যবসার%20সুযোগ%20সম্পর্কে%20জানতে%20চাই"
             class="btn btn-whatsapp"
             target="_blank"
           >
@@ -187,77 +173,25 @@
       </div>
     </section>
 
-    <!-- টেস্টিমোনিয়াল সেকশন -->
+    <!-- সাফল্যের গল্প (ভিডিও) -->
     <section class="testimonials" id="testimonials">
       <div class="container">
         <h2 class="section-title">সাফল্যের গল্প</h2>
         <div class="testimonial-grid">
           <div class="testimonial">
-            <div class="testimonial-text">
-              <p>
-                "DXN-এর প্রোডাক্ট ব্যবহার করে আমার ডায়াবেটিস নিয়ন্ত্রণে এসেছে,
-                এবং ব্যবসার মাধ্যমে মাসে ৫০,০০০ টাকা আয় করছি। জীবনটাই বদলে
-                গেছে!"
-              </p>
-            </div>
-            <div class="testimonial-author">
-              <div
-                class="author-img"
-                style="
-                  background-image: url('https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
-                "
-              ></div>
-              <div>
-                <h4>রফিকুল ইসলাম</h4>
-                <p>ঢাকা, বাংলাদেশ</p>
-              </div>
-            </div>
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/2NisSdaman0" title="Success Story 1" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="testimonial">
-            <div class="testimonial-text">
-              <p>
-                "শুধু লিংক শেয়ার করে আমি মাসে ২০,০০০ টাকা আয় শুরু করেছি। কোনো
-                প্রোডাক্ট কিনতে হয়নি, শুধু ফ্রি রেজিস্ট্রেশন করেছি।"
-              </p>
-            </div>
-            <div class="testimonial-author">
-              <div
-                class="author-img"
-                style="
-                  background-image: url('https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
-                "
-              ></div>
-              <div>
-                <h4>আয়শা সিদ্দিকা</h4>
-                <p>চট্টগ্রাম, বাংলাদেশ</p>
-              </div>
-            </div>
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/Wot-MZhCM5c" title="Success Story 2" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="testimonial">
-            <div class="testimonial-text">
-              <p>
-                "গ্যানোডার্মা কফি পান করে আমার ক্লান্তি দূর হয়েছে, এবং এখন আমি
-                পার্টটাইম কাজ করে ছাত্রজীবনেই স্বাবলম্বী হয়েছি।"
-              </p>
-            </div>
-            <div class="testimonial-author">
-              <div
-                class="author-img"
-                style="
-                  background-image: url('https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80');
-                "
-              ></div>
-              <div>
-                <h4>সজীব রহমান</h4>
-                <p>রাজশাহী, বাংলাদেশ</p>
-              </div>
-            </div>
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/tmFjlXq4Yf0" title="Success Story 3" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- WhatsApp রেজিস্ট্রেশন সেকশন -->
+    <!-- WhatsApp রেজিস্ট্রেশন -->
     <section class="registration" id="whatsapp">
       <div class="container">
         <h2 class="section-title">কিভাবে শুরু করবেন?</h2>
@@ -265,23 +199,17 @@
           <div class="step">
             <div class="step-number">১</div>
             <h3>WhatsApp-এ যোগাযোগ করুন</h3>
-            <p>নিচের বাটনে ক্লিক করে সরাসরি WhatsApp-এ মেসেজ করুন</p>
+            <p>নিচের বাটনে ক্লিক করে সরাসরি আমাদের সাথে WhatsApp-এ মেসেজ করুন।</p>
           </div>
           <div class="step">
             <div class="step-number">২</div>
             <h3>বিনামূল্যে রেজিস্টার করুন</h3>
-            <p>
-              আমাদের প্রতিনিধি আপনাকে রেজিস্ট্রেশন প্রক্রিয়া সম্পন্ন করতে
-              সাহায্য করবে
-            </p>
+            <p>আমাদের প্রতিনিধি আপনাকে রেজিস্ট্রেশনে সাহায্য করবে।</p>
           </div>
           <div class="step">
             <div class="step-number">৩</div>
-            <h3>লিংক শেয়ার করুন এবং আয় শুরু করুন</h3>
-            <p>
-              রেজিস্ট্রেশন শেষে আপনার একটি রেফারেল লিংক দেওয়া হবে এবং কমিশন
-              নেওয়া শুরু করুন
-            </p>
+            <h3>নেটওয়ার্ক বিল্ড করুন ও আয় শুরু করুন</h3>
+            <p>রেজিস্ট্রেশন শেষে ব্যবসা শিখুন, নেটোওয়ার্ক মার্কেটিং করুন। টিম তৈরি করুন এবং আয় শুরু করুন।</p>
           </div>
         </div>
 
@@ -289,9 +217,7 @@
           <div class="whatsapp-info">
             <h3>সরাসরি WhatsApp-এ যোগাযোগ করুন</h3>
             <p>
-              নিচের বাটনে ক্লিক করে আমাদের WhatsApp-এ মেসেজ করুন এবং বিনামূল্যে
-              রেজিস্ট্রেশন সম্পন্ন করুন। আমাদের টিম আপনাকে সম্পূর্ণ প্রক্রিয়াটি
-              বুঝিয়ে দেবে।
+              নিচের বাটনে ক্লিক করে WhatsApp-এ মেসেজ পাঠান এবং ফ্রি রেজিস্ট্রেশন সম্পন্ন করুন। আমাদের টিম আপনাকে ধাপে ধাপে বুঝিয়ে দেবে।
             </p>
           </div>
           <a
@@ -299,7 +225,7 @@
             class="btn btn-whatsapp"
             target="_blank"
           >
-            <i class="fab fa-whatsapp"></i> WhatsApp-এ এখনই মেসেজ করুন
+            <i class="fab fa-whatsapp"></i> WhatsApp-এ মেসেজ করুন
           </a>
         </div>
       </div>
@@ -312,8 +238,7 @@
           <div class="footer-section">
             <h3>DXN সম্পর্কে</h3>
             <p>
-              DXN হল একটি আন্তর্জাতিক কোম্পানি, যা মূলত গ্যানোডার্মা ভিত্তিক
-              হেলথ প্রোডাক্টস তৈরি করে। বিশ্বব্যাপী আমাদের কার্যক্রম রয়েছে।
+              DXN একটি আন্তর্জাতিক কোম্পানি যা মূলত গ্যানোডার্মা ভিত্তিক স্বাস্থ্য পণ্য তৈরি করে। বিশ্বের 180+ দেশে আমাদের কার্যক্রম রয়েছে।
             </p>
           </div>
           <div class="footer-section">
@@ -333,15 +258,13 @@
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook"></i></a>
               <a href="#"><i class="fab fa-youtube"></i></a>
-              <a href="https://wa.me/8801707042018" target="_blank"
-                ><i class="fab fa-whatsapp"></i
-              ></a>
+              <a href="https://wa.me/8801707042018" target="_blank"><i class="fab fa-whatsapp"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
         </div>
         <div class="copyright">
-          <p>&copy; 2023 DXN Bangladesh. All Rights Reserved.</p>
+          <p>&copy; 2025 DXN Bangladesh. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
