updated inde.html,index.js,products.html,products.js & styles.css

--- a/index.html
+++ b/index.html
@@ -90,50 +90,17 @@
       </div>
     </section>
 
-    <!-- প্রোডাক্টস সেকশন -->
-    <section class="products" id="products">
-      <div class="container">
-        <h2 class="section-title">DXN-এর জনপ্রিয় প্রোডাক্টস</h2>
-        <div class="product-grid">
-          <div class="product-card">
-            <div
-              class="product-img"
-              style="background-image: url('https://images.unsplash.com/photo-1544787219-7f47ccb76574?auto=format&fit=crop&w=500&q=80');"
-            ></div>
-            <div class="product-info">
-              <h3>গ্যানোডার্মা কফি</h3>
-              <p>
-                গ্যানোডার্মা সমৃদ্ধ কফি যা এনার্জি বাড়ায়, শরীরকে সতেজ রাখে এবং ইমিউন সিস্টেমকে শক্তিশালী করে।
-              </p>
-            </div>
-          </div>
-          <div class="product-card">
-            <div
-              class="product-img"
-              style="background-image: url('https://images.unsplash.com/photo-1556679343-c7306c1976bc?auto=format&fit=crop&w=500&q=80');"
-            ></div>
-            <div class="product-info">
-              <h3>গ্যানোডার্মা চা</h3>
-              <p>
-                ভেষজ চা যা স্ট্রেস কমায়, হজমশক্তি উন্নত করে এবং শরীর থেকে টক্সিন বের করতে সাহায্য করে।
-              </p>
-            </div>
-          </div>
-          <div class="product-card">
-            <div
-              class="product-img"
-              style="background-image: url('https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?auto=format&fit=crop&w=500&q=80');"
-            ></div>
-            <div class="product-info">
-              <h3>হেলথ সাপ্লিমেন্টস</h3>
-              <p>
-                ভিটামিন, মিনারেল এবং অ্যান্টিঅক্সিডেন্ট সমৃদ্ধ সাপ্লিমেন্ট যা শরীরের পুষ্টির ঘাটতি পূরণ করে।
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- Products Section on Home -->
+<section class="products" id="products">
+  <div class="container">
+    <h2 class="section-title">আমাদের প্রোডাক্টস</h2>
+    <div class="product-grid" id="home-products"></div>
+
+    <div class="see-more">
+      <a href="products.html" class="btn">See More</a>
+    </div>
+  </div>
+</section>
 
     <!-- ব্যবসার সুযোগ সেকশন -->
     <section class="business-opportunity" id="opportunity">
