added home-products.js , products-data.js and updated index.js, product.js

--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
       </div>
     </footer>
 
+    <script src="products-data.js"></script>
+    <script src="home-products.js"></script>  
     <script src="index.js"></script>
   </body>
 </html>
