--- a/products.html
+++ b/products.html
@@ -187,6 +187,7 @@
       </div>
     </footer>
 
+    <script src="products-data.js"></script>
     <script src="products.js"></script>
   </body>
 </html>
