--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
       </div>
     </footer>
 
-    <script src="products-data.js"></script>
-    <script src="home-products.js"></script>  
+    <!-- <script src="products-data.js"></script>
+    <script src="home-products.js"></script>   -->
     <script src="index.js"></script>
   </body>
 </html>
